--- a/index.html
+++ b/index.html
@@ -108,5 +108,8 @@
             </div>
         </div>
     </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, mollitia aspernatur! Quos est veritatis architecto voluptate reiciendis! Assumenda, pariatur eveniet.</p>
+    </section>
 </body>
 </html>
